--- a/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
+++ b/dokka-subprojects/plugin-base/src/main/resources/dokka/ui-kit/ui-kit.css
@@ -480,6 +480,7 @@
   padding: 12px 16px;
   position: relative;
   white-space: pre-wrap;
+  word-break: break-word;
 }
 
 code.block {
@@ -2630,6 +2631,9 @@ button.platform-tag:focus-visible {
   border: 1px solid rgba(0, 0, 0, 0.2);
   border: 1px solid var(--color-b20);
   border-bottom: 1px var(--color-b20);
+  font: 600 16px/24px Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, Oxygen, Droid Sans, Helvetica Neue, Arial;
+  font: var(--font-h4);
+  margin-bottom: 0;
   padding: 7px 16px;
 }
 
